[package]
name = "solid-parser"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Solid parser"

[dependencies]
quote = "1.0"
syn = "2.0"
leptos = { version = "0.4", features = ["csr"] }
proc-macro2 = "1.0.69"
regex = "1.10.0"
nom = "7.1.3"
#elm-parser = { path = "../../elm-parser" }
elm-parser = "4.0.11"
serde_json = "1.0.114"
serde = "1.0.197"
